# RetailAgenticSolutionDemo

./: .gitignore
backend/: debug_log.txt  debug_raw_db.py  debug_search.py  demo_seeder.py  generate_map.py  pyproject.toml  requirements.txt  run.py  trigger_replenishment.py  verify_decisions.py
backend/agents/: __init__.py
backend/agents/campaign_agent/: __init__.py  agent.py  prompts.py  tools.py
backend/agents/demand_agent/: __init__.py  agent.py  prompts.py  tools.py
backend/agents/inventory_agent/: __init__.py  agent.py  prompts.py  tools.py
backend/agents/orchestrator/: __init__.py  agent.py  prompts.py
backend/agents/pricing_agent/: __init__.py  agent.py  prompts.py  tools.py
backend/agents/replenishment_agent/: __init__.py  agent.py  prompts.py  tools.py
backend/agents/trend_agent/: __init__.py  agent.py  prompts.py  tools.py
backend/api/: main.py
backend/api/routes/: __init__.py  activity.py  agents.py  campaigns.py  decisions.py  demo.py  inventory.py  orchestrator.py  products.py  stores.py  trends.py
backend/config/: __init__.py  aws.py  settings.py
backend/data/: seed.py
backend/data/mock/: __init__.py  forecasts.py  inventory.py  products.py  sales.py  stores.py  transfers.py
backend/data/schemas/: __init__.py  tables.py
backend/shared/: __init__.py  bedrock.py  db.py  models.py
frontend/: README.md  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: AgentActivityPanel.tsx  AgentCard.tsx  AgentCardPanel.tsx  ClientLayout.tsx  LiveActivityPanel.tsx  ProgressStream.tsx  Sidebar.tsx  (+1 more)
(+13 files in other folders)
